# zenbitmaps

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.crates.md  README.md  justfile
.github/workflows/: ci.yml  fuzz.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: codecs.rs
benchmarks/: README.md
docs/public-api/: ABLATION-zenbitmaps.md  zenbitmaps.features.txt  zenbitmaps.internal.txt  zenbitmaps.txt
fuzz/: Cargo.toml  bitmaps.dict  generate_seeds.rs
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
fuzz/regression/: minimized-from-80ab7aace4f73cc5686dabb781683195ab202ac0
fuzz/regression/fuzz_decode/: amplification-bomb-16bpp-2e70592f
fuzz/regression/fuzz_roundtrip/: amplification-bomb-16bpp-14d8fb14  amplification-bomb-32bpp-81fabd3f  pnm-p3-16bit-rgb8-roundtrip-zenbitmaps-10
src/: alloc_util.rs  codec.rs  decode.rs  encode.rs  error.rs  info.rs  lib.rs  limits.rs  pixel.rs  pixel_traits.rs  zencodec.rs  zennode_defs.md
src/bmp/: decode.rs  encode.rs  mod.rs  utils.rs
src/codec/: bmp_codec.rs  farbfeld_codec.rs  hdr_codec.rs  mod.rs  pnm_codec.rs  qoi_codec.rs  tga_codec.rs
src/farbfeld/: decode.rs  encode.rs  mod.rs
src/hdr/: decode.rs  encode.rs  mod.rs
src/pnm/: decode.rs  encode.rs  mod.rs
src/qoi/: decode.rs  encode.rs  mod.rs  run_decode.rs
src/qoi/rapid_qoi/: decode.rs  encode.rs  mod.rs
src/tga/: decode.rs  encode.rs  mod.rs
tests/: bmp_rle_dos_regression.rs  corpus.rs  default_pixel_cap.rs  fixtures_conformance.rs  fuzz_regression.rs  hdr_conformance.rs  pnm_ascii_16bit_regression.rs  public_api_doc.rs  rgb_imgref.rs  roundtrip.rs  tga_conformance.rs
tests/fixtures/: float.hdr  gray8.tga  p1_ascii.pbm  p2_ascii.pgm  p3_ascii.ppm  p4_binary.pbm  p5_binary.pgm  p6_binary.ppm  rgb24.tga  rgb8.qoi  rgba16.ff  rgba32.tga
