[package]
name = "zenbitmaps"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "PNM/PAM/PFM, BMP, farbfeld, QOI, TGA, and Radiance HDR image codec"
categories = ["multimedia::images"]
keywords = ["image", "pnm", "bmp", "tga", "qoi"]
repository = "https://github.com/imazen/zenbitmaps"
documentation = "https://docs.rs/zenbitmaps"
readme = "README.crates.md"
include = [
    "/src/**",
    "/README.crates.md",
    "/CHANGELOG.md",
    "/LICENSE*",
]

[dependencies]
# Core (always available)
enough = "0.4.3"
# zencodec is an always-on integration: it is `#![no_std] + alloc`, so it adds
# no std requirement and compiles on every target (incl. wasm32). That makes
# these four its unconditional companions — the codec adapters use the
# `rgb`/`imgref` pixel types and the `zenpixels`/`zenpixels-convert` descriptor
# machinery directly, so they can no longer be optional.
imgref = { version = "1.12", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
thiserror = { version = "2.0", default-features = false }
whereat = { version = "0.1.5", default-features = false }
zencodec = { version = "0.1.25" }
# zennode is not yet published; uncomment when it's on crates.io
# zennode = { path = "../zennode/zennode", default-features = false, features = ["derive"], optional = true }
zenpixels = { version = "0.2.13", default-features = false, features = ["imgref"] }
# Load-bearing descriptor narrowing for the zencodec encode path — raw
# formats pay full price for dead lanes, so the reduction wins more here
# than for any entropy-coded codec.
zenpixels-convert = { version = "0.2.13", default-features = false }
# SIMD acceleration
archmage = { version = "0.9.15", default-features = false, optional = true }
garb = { version = "0.2.5", default-features = false, optional = true }

[dev-dependencies]
archmage = { version = "0.9.14", features = ["std"] }
zenutils-fuzz = "0.1.0"
zenbench = "0.1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
codec-corpus = "1"

[features]
default = []
std = ["enough/std", "whereat/std"]

# Format groups
bmp = []   # Full BMP support (all bit depths, RLE, bitfields, palettes)
hdr = []   # Radiance HDR/RGBE format support
tga = []   # TGA (Targa) format support
qoi = []  # QOI codec (vendored core in src/qoi/rapid_qoi)
simd = ["dep:garb", "dep:archmage"]  # SIMD acceleration

# Typed pixel support. The `rgb`/`imgref` crates are always linked now (the
# always-on zencodec codec adapters use them directly); these features only
# gate the extra typed-pixel convenience surface (`RGB8`, `ImgVec` re-exports,
# `EncodePixel`/`DecodePixel`) on the bare decode/encode API.
rgb = []          # RGB8, RGBA8 etc. typed pixel encode/decode
imgref = ["rgb"]  # ImgVec/ImgRef 2D buffer support (implies rgb)

# zennode node definitions (EncodeBmp schema with RIAPI keys)
# Disabled until zennode is published to crates.io
# zennode = ["dep:zennode"]

# All optional features
all = ["bmp", "qoi", "tga", "hdr", "simd", "rgb", "imgref"]

[[bench]]
name = "codecs"
harness = false
required-features = ["bmp", "qoi", "tga", "hdr"]

[patch.crates-io]
# TEMP: until zencodec 0.1.26 ships (PR #103) — provides the unreleased
# `CategorizedError` taxonomy (trait + `ErrorCategory` + `LimitKind`). Remove
# this patch and bump the `zencodec` version dependency once 0.1.26 is published.
zencodec = { git = "https://github.com/imazen/zencodec", branch = "cancellation-classification-99" }

